# eng-ai-agents

./: .env.example  .gitignore  Makefile  docker-compose.yml
.devcontainer/: devcontainer.json
assignments/assignment-1/: README.md
assignments/assignment-1/assignment 1 - part 2/: 01-assignment-part-1.ipynb
assignments/assignment-2/: README.md
assignments/assignment-2/assignment 2 - part 1/: 01_setup_sanity_cpu.ipynb
assignments/assignment-2/assignment 2 - part 2/: 02_patchcore_train_eval_cpu.ipynb
assignments/assignment-2/assignment 2 - part 3/: 03_explainability_heatmaps_cpu.ipynb
assignments/assignment-2/assignment 2 - part 4/: 04_features_pgvector_ingest_cpu.ipynb
assignments/assignment-2/assignment 2 - part 5/: 05_similarity_search_demo_cpu.ipynb
assignments/assignment-3/: README.md
assignments/assignment-3/assignment 3 - part 1/: 01_dataset_explore.ipynb
assignments/assignment-3/assignment 3 - part 2/: 02_train_segmentation.ipynb
assignments/assignment-3/assignment 3 - part 3/: 03_infer_images.ipynb
assignments/assignment-6/: 01_ppo_baseline.ipynb  02_grpo_check.ipynb  03_compare_ppo_vs_grpo.ipynb  README.md  agent.py  agent_vectorized.py  agent_vectorized.py.before_grpo  agent_vectorized.py.ppo_backup_before_grpo  breakoutppoagent.md  pyproject.toml
assignments/midterm/: README.md  midterm pt2.ipynb  midterm pt3.ipynb  midterm.ipynb
project/: 00_environment.ipynb  01_single_image_prototype.ipynb  02_gradio_single_image.ipynb  03_webrtc_bridge.ipynb  04_gradio_app.ipynb  README.md  webrtc_receiver.py
(+7 files in other folders)
