[project]
name = "breakout-ppo-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "gymnasium[atari,accept-rom-license]==0.29.1",
    "stable-baselines3==2.2.1",
    "numpy==1.23.5",
    "torch==1.13.1",
    "tqdm==4.64.1",
    "opencv-python>=4.11.0.86",
    "tensorboard>=2.11.0",
]
